# truckers

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
src/: ffi.rs  lib.rs  nice.rs  telemetry_events.rs  tracing_subscriber.rs  value.rs
src/nice/: callbacks.rs  telemetry.rs  value.rs
src/nice/telemetry/: channels.rs  events.rs
src/notnice/telemetry/: events.rs
truckers-scssdk-sys/: Cargo.toml  build.rs  wrapper.hpp
truckers-scssdk-sys/scs_sdk_1_14/include/: scssdk_telemetry_event.h
truckers-scssdk-sys/src/: lib.rs
