[workspace]
members = ["truckers-scssdk-sys"]

[package]
name = "truckers"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
truckers-scssdk-sys = { path = "truckers-scssdk-sys" }
chrono = "0.4.38"
tracing = "0.1.40"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.56.0", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
